TFP-6285 legger til termindato i xml ved ES søknad på fødsel (#426)